[package]
name = "flink-kafka-filter-transform"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
futures = "0.3.31"
prometheus-client = "0.23.1"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
